pkg/front_end/testcases/inference/block_bodied_lambdas_infer_bottom_sync.dart.strong.transformed.expect
library test /*isLegacy*/;
//
// Problems in library:
//
// pkg/front_end/testcases/inference/block_bodied_lambdas_infer_bottom_sync.dart:5:1: Error: Library doesn't support null safety.
// // @dart=2.9
// ^^^^^^^^^^^^
//
import self as self;
import "dart:core" as core;

static field dynamic h = null;
static method foo((core::Object*) →* core::int* f) → void {}
static method test() → dynamic {
  (core::Object*) →* Null f = (core::Object* x) → Null {
    return null;
  };
  core::String* y = f(42){(core::Object*) →* Null};
  f = (core::Object* x) → Null => "hello" as{TypeError,ForLegacy} Null;
  self::foo((core::Object* x) → Null {
    return null;
  });
  self::foo((core::Object* x) → Null {
    throw "not implemented";
  });
}
static method main() → dynamic {}
